// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`readVaultFull (with active session) > no active session 1`] = `
{
  "activeSession": null,
  "dexterAuthority": "H5hM4fqRjygvCYXnp6dgFLgZ6o4uJ8Q9z7dAsTfapHmF",
  "exists": true,
  "pendingVoucherCount": 7,
  "swigAddress": "DdqGmK5uamYN5vmuZrzpQhKeehLdwtPLVJdhu5P2iJKC",
  "version": 2,
}
`;

exports[`readVaultFull (with active session) > with active session 1`] = `
{
  "activeSession": {
    "allowedCounterparty": "29d2S7vB453rNYFdR5Ycwt7y9haRT5fwVwL9zTmBhfV2",
    "expiresAt": 1735689999,
    "maxAmount": 1000000n,
    "nonce": 42,
    "sessionPubkey": Uint8Array(32) "ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
    "spent": 50000n,
  },
  "dexterAuthority": "H5hM4fqRjygvCYXnp6dgFLgZ6o4uJ8Q9z7dAsTfapHmF",
  "exists": true,
  "pendingVoucherCount": 7,
  "swigAddress": "DdqGmK5uamYN5vmuZrzpQhKeehLdwtPLVJdhu5P2iJKC",
  "version": 2,
}
`;

exports[`readVaultFull (with active session) > with both withdrawal and session (offsets shift +48) 1`] = `
{
  "activeSession": {
    "allowedCounterparty": "29d2S7vB453rNYFdR5Ycwt7y9haRT5fwVwL9zTmBhfV2",
    "expiresAt": 1735689999,
    "maxAmount": 1000000n,
    "nonce": 42,
    "sessionPubkey": Uint8Array(32) "ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
    "spent": 50000n,
  },
  "dexterAuthority": "H5hM4fqRjygvCYXnp6dgFLgZ6o4uJ8Q9z7dAsTfapHmF",
  "exists": true,
  "pendingVoucherCount": 7,
  "swigAddress": "DdqGmK5uamYN5vmuZrzpQhKeehLdwtPLVJdhu5P2iJKC",
  "version": 2,
}
`;

exports[`readVaultOnchain (slim) > no pending withdrawal → pendingWithdrawal=null 1`] = `
{
  "exists": true,
  "pendingVoucherCount": 7,
  "pendingWithdrawal": null,
}
`;

exports[`readVaultOnchain (slim) > with pending withdrawal → decoded 1`] = `
{
  "exists": true,
  "pendingVoucherCount": 7,
  "pendingWithdrawal": {
    "amount": "100000",
    "destination": "EnTJCS15dqbDTU2XywYSMaScoPv4Py4GzExrtY9DQxoD",
    "requestedAt": 1735689600,
  },
}
`;
